# YP

./: .gitignore  buf.yaml  go.mod  go.sum
crop-service/cmd/server/: main.go
crop-service/internal/application/: crop_service.go
crop-service/internal/domain/: crop.go  errors.go
crop-service/internal/handlers/: crop_handler.go  event_crop.go
crop-service/internal/mappers/: crop_mapper.go
crop-service/internal/models/: crop.go
crop-service/internal/repositories/: crop_repository.go
crop-service/internal/services/: crop_service.go
crop-service/proto/: crop.proto
crop-service/sqlc/: sqlc.yaml
farm-service/proto/: farm.proto
farm-service/sqlc/: sqlc.yaml
field-service/proto/: field.proto
field-service/sqlc/: sqlc.yaml
irrigation-service/proto/: irrigation.proto
irrigation-service/sqlc/: sqlc.yaml
julia-scientific/: Project.toml
julia-scientific/climate_response_models/: ClimateResponse.jl
julia-scientific/crop_growth_simulation/: CropGrowth.jl  Phenology.jl  Photosynthesis.jl
julia-scientific/irrigation_simulation/: IrrigationSimulation.jl
julia-scientific/soil_nutrient_diffusion/: NutrientDiffusion.jl
mobile/: analysis_options.yaml  melos.yaml  pubspec.yaml
pest-prediction-service/proto/: pest.proto
plant-diagnosis-service/proto/: diagnosis.proto
plant-diagnosis-service/sqlc/: sqlc.yaml
python-ai/: __init__.py  pyproject.toml
python-ai/disease_detection/: __init__.py  dataset.py  inference.py  model.py  trainer.py  transforms.py
python-ai/nutrient_deficiency/: __init__.py  dataset.py  inference.py  model.py  trainer.py  transforms.py
python-ai/pest_detection/: __init__.py  dataset.py  inference.py  model.py  trainer.py  transforms.py
python-ai/plant_classification/: __init__.py  dataset.py  inference.py  model.py  trainer.py  transforms.py
python-ai/utils/: __init__.py  export.py  metrics.py  visualization.py
rust-engines/: Cargo.toml
rust-engines/crop-recommendation-engine/: Cargo.toml
rust-engines/crop-recommendation-engine/src/: criteria.rs  lib.rs  ranking.rs  scoring.rs
rust-engines/plant-ai-inference-engine/: Cargo.toml
rust-engines/plant-ai-inference-engine/src/: lib.rs  pipeline.rs  postprocessing.rs  preprocessing.rs
rust-engines/satellite-ndvi-engine/: Cargo.toml
rust-engines/satellite-ndvi-engine/src/: evi.rs  lib.rs  ndvi.rs  ndwi.rs  raster.rs  statistics.rs  stress_detector.rs  vegetation_classifier.rs
rust-engines/terrain-analysis-engine/: Cargo.toml
rust-engines/terrain-analysis-engine/src/: aspect.rs  contour.rs  dem.rs  flow_accumulation.rs  flow_direction.rs  lib.rs  slope.rs  watershed.rs
rust-engines/water-flow-simulation-engine/: Cargo.toml
rust-engines/water-flow-simulation-engine/src/: hydraulics.rs  lib.rs  moisture.rs  water_balance.rs
rust-engines/yield-prediction-engine/: Cargo.toml
rust-engines/yield-prediction-engine/src/: factors.rs  lib.rs  model.rs  prediction.rs
satellite-analytics-service/proto/: analytics.proto
satellite-analytics-service/sqlc/: sqlc.yaml
satellite-ingestion-service/proto/: ingestion.proto
satellite-processing-service/proto/: processing.proto
satellite-service/proto/: satellite.proto
satellite-service/sqlc/: sqlc.yaml
satellite-tile-service/proto/: tile.proto
sensor-service/proto/: sensor.proto
sensor-service/sqlc/: sqlc.yaml
soil-service/proto/: soil.proto
soil-service/sqlc/: sqlc.yaml
traceability-service/proto/: traceability.proto
traceability-service/sqlc/: sqlc.yaml
vegetation-index-service/proto/: vegetation_index.proto
vegetation-index-service/sqlc/: sqlc.yaml
web/: PROTO_CODEGEN_IMPLEMENTATION.md  PROTO_GENERATION_GAPS.md  README.md  pnpm-lock.yaml
web/docs/: FRONTEND_ARCHITECTURE.md  FRONTEND_TODO.md
web/proxy/: Caddyfile  dev-proxy.ts
yield-service/proto/: yield.proto
(+749 files in other folders)
