[project]
name = "agriculture-ai"
version = "1.0.0"
description = "AI models for precision agriculture platform"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "albumentations>=1.3.0",
    "timm>=0.9.0",
    "onnxruntime>=1.16.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "ultralytics>=8.0.0",
]

[project.optional-dependencies]
export = [
    "onnx>=1.14.0",
    "onnxsim>=0.4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
