[package]
name = "crop-recommendation-engine"
version = "0.1.0"
edition = "2021"
description = "Crop recommendation engine using multi-criteria analysis"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ordered-float = { version = "4", features = ["serde"] }
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
