[package]
name = "plant-ai-inference-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance image preprocessing and AI model inference pipeline"

[dependencies]
image = "0.25"
ndarray = { version = "0.16", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1.10"

[dev-dependencies]
approx = "0.5"
