[package]
name = "satellite-ndvi-engine"
version = "0.1.0"
edition = "2021"
description = "Satellite raster processing for vegetation index computation"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
image = "0.25"

[dev-dependencies]
approx = "0.5"
