[package]
name = "terrain-analysis-engine"
version = "0.1.0"
edition = "2021"
description = "DEM processing for terrain analysis including slope, aspect, and watershed delineation"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ordered-float = { version = "4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
