[package]
name = "yield-prediction-engine"
version = "0.1.0"
edition = "2021"
description = "Multi-factor crop yield prediction engine"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1.10"
ordered-float = { version = "4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
